--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<title>Hyperspace by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/styles.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -17,6 +18,7 @@
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
+					<img src="images/Profile_pic.jpg" alt="Dinesh Kannan" class="profile-pic">
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
@@ -41,6 +43,31 @@
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
 						</div>
+						<section>
+							<ul class="contact">
+								<li>
+									<h3>Address</h3>
+									<span>Raleigh, NC 27606<br />
+									USA</span>
+								</li>
+								<li>
+									<h3>Email</h3>
+									<a href="dkannan@ncsu.edu">dkannan@ncsu.edu</a>
+								</li>
+								<li>
+									<h3>Phone</h3>
+									<span>(919) 633-5438</span>
+								</li>
+								<li>
+									<h3>Social</h3>
+									<ul class="icons">
+										<li><a href="https://github.com/dineshkannan010" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.instagram.com/dineshk012/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.linkedin.com/in/dinesh-kannan-01ab171a4" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+									</ul>
+								</li>
+							</ul>
+						</section>
 					</section>
 
 				<!-- One -->
@@ -161,34 +188,6 @@
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
-								</section>
-								<section>
-									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>1331 Crab Orchard Dr<br />
-											Raleigh, NC 27607<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="dkannan@ncsu.edu">dkannan@ncsu.edu</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(919) 633-5438</span>
-										</li>
-										<li>
-											<h3>Social</h3>
-											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="https://github.com/dineshkannan010" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="https://www.instagram.com/dineshk012/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="https://www.linkedin.com/in/dinesh-kannan-01ab171a4" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-											</ul>
-										</li>
-									</ul>
 								</section>
 							</div>
 						</div>
