--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
-					<img src="images/Profile_pic.jpg" alt="Dinesh Kannan" class="profile-pic">
+					<img src="images/Profile_pic.JPG" alt="Dinesh Kannan" class="profile-pic">
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
@@ -188,7 +188,7 @@
 						</div>
 					</section>
 				</section>
-				
+
 				<!-- Five -->
 					<section id="five" class="wrapper style1 fade-up">
 						<div class="inner">
